# propeller

./: .gitignore  .mockery.yaml  Makefile  README.md  TESTING.md  config.go  go.mod  go.sum  k8s_setup.md  rust-toolchain.toml  start-task.sh  test.md
.github/: dependabot.yml
cli/: fl.go  tasks.go
cmd/: main.go
coco/: README.md  deploy_coco.sh  proplet-config.yaml  proplet.yaml
deploy/: otel-collector-config.yaml
docker/: .env  Dockerfile  Dockerfile.dev  Dockerfile.proplet  Dockerfile.proplet-wasinn  Dockerfile.proplet.dev  compose.observability.yaml  compose.yaml
docs/: IMPLEMENTATION_SUMMARY.md  cloud-init-setup.md  federated-learning.md  operator-quickstart.md  operator.md
embed-proplet/: CMakeLists.txt  prj.conf
examples/esp32s3-wasm-benchmark-espidf/main/: CMakeLists.txt  bench.c  main.c  metrics.c  metrics.h  wasm_tasks.h
examples/hal-runner/: Cargo.toml  README.md
examples/hal-runner/src/: main.rs
examples/http-client-raw-wit/: Cargo.toml
manager/: cron.go  cron_scheduler.go  fl_integration_test.go  fl_service.go  fl_types.go  manager.go  metrics.go  service.go  service_job_test.go  service_proplet_test.go  service_test.go  service_workflow_test.go  shutdown_test.go  workflow.go
proplet/: Cargo.toml  README.md  config.go  config.json  discovery.go  mqtt.go  proplet.go  requests.go  responses.go  runtime.go  service.go  worker.go
proplet-rs/: Cargo.toml
proxy/: http.go  service.go
runtimes/: meta.go
task/: task.go
ui/: package-lock.json  package.json  tsconfig.json  turbo.json
worker/: config.go  discovery.go  endpoint.go  (+10 more)
(+251 files in other folders)
