[package]
name = "hal-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hal-runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = "46.0.1"
wasmtime-wasi = "46.0.1"
wasmtime-wasi-http = "46.0.1"
elastic-tee-hal = { git = "https://github.com/elasticproject-eu/wasmhal", rev = "f25abaf2448a4d424061e6355e8a915e4b5c6cf2", default-features = false, features = [
  "amd-sev",
] }
