[package]
name = "http-client-raw-wit"
version = "0.4.0"
edition = "2021"
publish = false

[[bin]]
name = "http-client-raw-wit"
path = "src/main.rs"

[dependencies]
wit-bindgen = { version = "0.58.0", default-features = false, features = ["realloc", "macros"] }

[profile.release]
opt-level = "s"
strip = true
